# jxlit

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
assets/: colors-ACES-RGB_D65_SRG_Rel_Lin_e1_d0p5_fd4.jxl  colors-ACES-RGB_D65_SRG_Rel_Lin_ref.exr  colors-ACEScct-RGB_D65_SRG_Rel_Lin_e1_d0p5_fd4.jxl  colors-ACEScct-RGB_D65_SRG_Rel_Lin_ref.exr  colors-P3-RGB_D65_DCI_Rel_DCI_e1_d0p5_fd4.jxl  colors-P3-RGB_D65_DCI_Rel_DCI_ref.exr  colors-Rec2020-Rec2100PQ_e1_d0p5_fd4.jxl  colors-Rec2020-Rec2100PQ_ref.exr  colors_e1_d0p5_fd4.jxl  frame_4K_10bit_e1_d0p5_fd4.jxl  manifest.json
benchmarks/candidates/djxl/: CMakeLists.txt  bench.cpp  manifest.toml
benchmarks/candidates/imagecodecs/: bench.py  manifest.toml  pyproject.toml
benchmarks/candidates/jxl-oxide/: Cargo.toml  manifest.toml
benchmarks/candidates/jxl-oxide/src/: main.rs
benchmarks/candidates/jxl-rs/: Cargo.toml  manifest.toml
benchmarks/candidates/jxl-rs/src/: main.rs
benchmarks/candidates/jxlit/: README.md  manifest.toml
benchmarks/candidates/libjxl/: CMakeLists.txt  Makefile  bench.cpp  manifest.toml
scripts/: benchmark.py  benchmark_common.py  benchmark_compare.py  exr_to_pfm.py  gen_test_card.py  trace.py
src/node-jxlit/: .prettierignore  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
src/node-jxlit/src/: benchmark.ts  index.ts  lib.rs
src/node-jxlit/test/: decode.test.js  decode.test.ts
src/python-jxlit/: Cargo.toml  build.rs  pyproject.toml
src/python-jxlit/jxlit/: __init__.py  _core.py  _jxlit.pyi  benchmark.py
src/python-jxlit/src/: lib.rs
src/python-jxlit/tests/: test_colorspace_fixtures.py  test_decode.py
src/rust-jxlit/: Cargo.toml
src/rust-jxlit/src/: lib.rs  pipeline.rs  tests.rs  types.rs
src/rust-jxlit/src/pipeline/: decode.rs  interleave.rs  mod.rs  modular.rs  parse.rs  process.rs  render.rs  structs.rs  vardct.rs
src/rust-jxlit/src/pipeline/decode/: dequant.rs  entropy.rs  idct.rs
src/rust-jxlit/src/pipeline/gpu/: availability.rs  color_transform.rs  context.rs  crop.rs  device.rs  environment.rs  image.rs  kernels.rs  mod.rs  modular.rs  noise.rs  pipeline.rs  transfer.rs  upsample.rs
src/rust-jxlit/src/pipeline/gpu/shaders/: color_ops.wgsl  crop.wgsl  export.wgsl  fuse_spot.wgsl  modular_to_float.wgsl  noise_apply.wgsl  noise_convolve.wgsl  noise_rng.wgsl  nonseparable_upsample.wgsl
src/rust-jxlit/src/pipeline/parse/: container.rs  frames.rs  tiles.rs
src/rust-jxlit/src/pipeline/process/: export.rs  features.rs  filters.rs  interleave.rs  upsample.rs  xyb2rgb.rs
src/rust-jxlit/src/pipeline/render/: dequant.rs  entropy.rs  flows.rs  frame.rs  idct.rs  postprocess.rs  region.rs  tile.rs  vardct.rs  xyb2rgb.rs
src/rust-jxlit/src/pipeline/render/flows/: modular.rs  vardct.rs
src/rust-jxlit/src/pipeline/structs/: container.rs  frame.rs  tile.rs
src/rust-jxlit/src/telemetry/: mod.rs
src/wasm-jxlit/: Cargo.toml  eslint.config.js  index.js  package.json  tsconfig.json
src/wasm-jxlit/src/: benchmark.ts  index.ts  lib.rs  telemetry.ts
src/wasm-jxlit/test/: decode.test.js  decode.test.ts
