[project]
name = "jxlit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jxlit._jxlit"
python-source = "."
manifest-path = "Cargo.toml"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pillow>=11.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
