[package]
name = "jxlit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
jxl-bitstream = "1.1"
jxl-color = "0.11"
jxl-frame = "0.13"
jxl-image = "0.13"
jxl-oxide-common = "1.0"
jxl-render = "0.12"
jxl-threadpool = "1.0"

[dev-dependencies]
png = "0.17"
