[package]
name = "jxlit"
version.workspace = true
# Overrides the workspace edition (2021): the vendored jxl-render/jxl-frame/
# jxl-vardct sources are edition 2024 and compile as in-crate modules.
edition = "2024"
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["rayon", "gpu"]
rayon = ["jxl-threadpool/rayon"]
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
# Direct deps used by our pipeline and by the vendored sub-crates under src/vendor/.
bytemuck = { version = "1.19", features = ["derive"] }
jxl-bitstream = "1.1"
jxl-coding = "1.0"
jxl-color = { path = "src/vendor/jxl-color" }
jxl-grid = "0.6.2"
jxl-image = "0.13"
jxl-modular = "0.11.3"
jxl-oxide-common = "1.0"
jxl-threadpool = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
web-time = "1"
pollster = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
